--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/main.css" >
+        <script src="js/main.js"></script>
     </head>
     <body>
-
+        <div id="cover">
+            <div id="cover-part1">
+                <div class="cover-indent"><div id="tittle-bar-img" class="tittle-part3-left-indent"></div></div>
+                <div id="tittle-text-img"><div id="tittle-text-img1" class="tittle-part3-left-indent"></div><div id="tittle-text-img2" class="tittle-part3-left-indent"></div></div>
+            </div>
+            <div id="cover-part2">
+                <div id="tittle-img" class="cover-indent"></div>
+            </div>
+            <div id="cover-part3">
+                <div id="tittle-label-img" class="cover-indent"></div>
+            </div>
+        </div>
     </body>
 </html>
