--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="css/main.css" >
         <script src="js/main.js"></script>
+        
     </head>
     <body>
         <div id="cover">
@@ -18,4 +19,5 @@
             </div>
         </div>
     </body>
+    <script src="js/adjust.js"></script>
 </html>
