--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
             </div>
             <div id="cover-part2">
                 <div id="tittle-img" class="cover-indent"></div>
+                <div class="next-ico-border"><div class="next-ico-arrow"></div></div>
             </div>
             <div id="cover-part3">
                 <div id="tittle-label-img" class="cover-indent"></div>
             </div>
         </div>
     </body>
-    <script src="js/adjust.js"></script>
+    <script src="js/proportion.js"></script>
 </html>
