--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="user-scalable=no">
         <link rel="stylesheet" type="text/css" href="css/main.css" >
         <script src="js/main.js"></script>
         
