--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                 </div>
                 
                 <div id="cover-part2-page2" style="display: none;">
-                    <div class="cover-indent next-ico-unity next-ico-border-pre cover-pre"><div class="next-ico-arrow-unity next-ico-arrow-pre cover-pre"></div></div>
+                    <div class="cover-indent" id="intro-btn">
+                        <div class="next-ico-unity next-ico-border-pre cover-pre"><div class="next-ico-arrow-unity next-ico-arrow-pre cover-pre"></div></div>
+                        <div class="next-ico-unity next-ico-border-min cover-next2"><div class="next-ico-arrow-unity next-ico-arrow-min cover-next2"></div></div>
+                    </div>
                     <div id="tittle-img-min" class="cover-indent"></div>
                     <div id="introduction-img"></div>
                 </div>
