--- a/index.html
+++ b/index.html
@@ -8,29 +8,22 @@
         
     </head>
     <body>
-        <div id="cover">
-            <div id="cover-part1">
-                <div class="cover-indent"><div id="tittle-bar-img" class="tittle-part1-left-indent"></div></div>
-                <div id="tittle-text-img"><div id="tittle-text-img1" class="tittle-part1-left-indent"></div><div id="tittle-text-img2" class="tittle-part1-left-indent"></div></div>
-            </div>
-            <div id="cover-part2">
-                <div id="cover-part2-page1">
+        <div id="container">
+            <div id="cover">
+                <div id="cover-part1">
+                    <div class="cover-indent"><div id="tittle-bar-img" class="tittle-part1-left-indent"></div></div>
+                    <div id="tittle-text-img"><div id="tittle-text-img1" class="tittle-part1-left-indent"></div><div id="tittle-text-img2" class="tittle-part1-left-indent"></div></div>
+                </div>
+                <div id="cover-part2">
                     <div id="tittle-img" class="cover-indent"></div>
                     <div class="next-ico-unity next-ico-border cover-next"><div class="next-ico-arrow-unity next-ico-arrow cover-next"></div></div>
                     <div id="enter-img" class="cover-next"></div>
                 </div>
-                
-                <div id="cover-part2-page2" style="display: none;">
-                    <div class="cover-indent next-ico-unity next-ico-border-pre cover-pre"><div class="cover-indent next-ico-arrow-unity next-ico-arrow-pre cover-pre"></div></div>
-                    <div id="tittle-img-min" class="cover-indent"></div>
-                    <div id="introduction-img"></div>
+                <div id="cover-part3">
+                    <div id="tittle-label-img" class="cover-indent"></div>
                 </div>
             </div>
-            <div id="cover-part3">
-                <div id="tittle-label-img" class="cover-indent"></div>
-            </div>
         </div>
-
     </body>
     <script src="js/proportion.js"></script>
     <script src="js/animation.js"></script>
