--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="user-scalable=no">
-        <link rel="stylesheet" type="text/css" href="css/main.css" >
-        <script src="js/main.js"></script>
+        <meta charset='utf-8'>
+        <meta name='viewport' content='user-scalable=no'>
+        <link rel='stylesheet' type='text/css' href='css/main.css' >
+        <script src='js/main.js'></script>
         
     </head>
     <body>
-        <div id="container">
+        <div id='container'>
             <div id='cover-part1'>
                 <div class='cover-indent'><div id='tittle-bar-img' class='tittle-part1-left-indent'></div></div>
                 <div id='tittle-text-img'><div id='tittle-text-img1' class='tittle-part1-left-indent'></div><div id='tittle-text-img2' class='tittle-part1-left-indent'></div></div>
@@ -23,6 +23,6 @@
             </div>
         </div>
     </body>
-    <script src="js/proportion.js"></script>
-    <script src="js/animation.js"></script>
+    <script src='js/proportion.js'></script>
+    <script src='js/animation.js'></script>
 </html>
