--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <meta name='viewport' content='user-scalable=no'>
-        <link rel='stylesheet' type='text/css' href='css/main-inter.css' >
+        <link rel='stylesheet' type='text/css' href='css/main-cyber.css' >
         <script src='js/main.js'></script>
         
     </head>
