--- a/index.html
+++ b/index.html
@@ -3,23 +3,100 @@
     <head>
         <meta charset='utf-8'>
         <meta name='viewport' content='user-scalable=no'>
-        <link rel='stylesheet' type='text/css' href='css/main-cyber.css' >
+        <link rel='stylesheet' type='text/css' href='css/main.css' >
         <script src='js/main.js'></script>
         
     </head>
     <body>
         <div id='container'>
-            <div id='cover-part1'>
-                <div class='cover-indent'><div id='tittle-bar-img' class='tittle-part1-left-indent'></div></div>
-                <div id='tittle-text-img'><div id='tittle-text-img1' class='tittle-part1-left-indent'></div><div id='tittle-text-img2' class='tittle-part1-left-indent'></div></div>
-            </div>
-            <div id='cover-part2'>
-                <div id='tittle-img' class='cover-indent'></div>
-                <div class='next-ico-unity next-ico-border cover-next'><div class='next-ico-arrow-unity next-ico-arrow cover-next'></div></div>
-                <div id='enter-img' class='cover-next'></div>
-            </div>
             <div id='cover-part3'>
+                <div class='back-2-1st' id='back-2-1st-border'>
+                    <div class='back-2-1st' id='back-2-1st-arrow'></div>
+                </div> 
                 <div id='tittle-label-img' class='cover-indent'></div>
+                <div class='tittle-img-min2'></div>
+            </div>
+            <div id='cover-part1-part2' class='cover-indent'>
+                <div class='works-head'>
+                    <div id='awa-1st-1-90' class='works-inform'></div>
+                    <div class='slide-ud-ico2'></div>
+                </div>
+                <div class='works-body'>
+                    <div class='works-content' id='awa-1st-1-content'>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-1-content1' class='awa-content-img'></div>
+                            <div id='awa-1st-1-content2' class='awa-content-img'></div>
+                            <div id='awa-1st-1-content3' class='awa-content-img'></div>
+                        </div>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-1-content4' class='awa-content-img'></div>
+                            <div id='awa-1st-1-content5' class='awa-content-img'></div>
+                            <div id='awa-1st-1-content6' class='awa-content-img'></div>
+                        </div>
+                    </div>
+                    <div class='works-content' id='awa-1st-2-content'>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-2-content1' class='awa-content-img'></div>
+                            <div id='awa-1st-2-content2' class='awa-content-img'></div>
+                            <div id='awa-1st-2-content3' class='awa-content-img'></div>
+                        </div>
+                    </div>
+                    <div class='works-content' id='awa-1st-3-content'>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-3-content1' class='awa-content-img'></div>
+                            <div id='awa-1st-3-content2' class='awa-content-img'></div>
+                            <div id='awa-1st-3-content3' class='awa-content-img'></div>
+                        </div>
+                    </div>
+                    <div class='works-content' id='awa-1st-4-content'>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-4-content1' class='awa-content-img'></div>
+                            <div id='awa-1st-4-content2' class='awa-content-img'></div>
+                            <div id='awa-1st-4-content3' class='awa-content-img'></div>
+                        </div>
+                    </div>
+                    <div class='works-content' id='awa-1st-5-content'>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-5-content1' class='awa-content-img'></div>
+                            <div id='awa-1st-5-content2' class='awa-content-img'></div>
+                            <div id='awa-1st-5-content3' class='awa-content-img'></div>
+                        </div>
+                    </div>
+                    <div class='works-content' id='awa-1st-5-content'>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-5-content1' class='awa-content-img'></div>
+                            <div id='awa-1st-5-content2' class='awa-content-img'></div>
+                            <div id='awa-1st-5-content3' class='awa-content-img'></div>
+                        </div>
+                    </div>
+                    <div class='works-content' id='awa-1st-5-content'>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-5-content1' class='awa-content-img'></div>
+                            <div id='awa-1st-5-content2' class='awa-content-img'></div>
+                            <div id='awa-1st-5-content3' class='awa-content-img'></div>
+                        </div>
+                    </div>
+                    <div class='works-content' id='awa-1st-5-content'>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-5-content1' class='awa-content-img'></div>
+                            <div id='awa-1st-5-content2' class='awa-content-img'></div>
+                            <div id='awa-1st-5-content3' class='awa-content-img'></div>
+                        </div>
+                    </div>
+                    <div class='works-content' id='awa-1st-9-content'>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-9-content1' class='awa-content-img'></div>
+                            <div id='awa-1st-9-content2' class='awa-content-img'></div>
+                        </div>
+                    </div>
+                    <div class='works-content' id='awa-1st-10-content'>
+                        <div class='awa-content-line'>
+                            <div id='awa-1st-10-content1' class='awa-content-img'></div>
+                            <div id='awa-1st-10-content2' class='awa-content-img'></div>
+                            <div id='awa-1st-10-content3' class='awa-content-img'></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
