--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         
     </head>
     <body>
+        <div id="load"><div></div></div>
         <div id='container'>
             <div id='cover-part1' class='fade-in'>
                 <div class='cover-indent'><div id='tittle-bar-img' class='tittle-part1-left-indent'></div></div>
